@@ -1,5 +1,11 @@
 2005-10-24  Daniel Macks  <dmacks@netspace.org>
 
+	* PkgVersion.pm: Use local() instead of temp var when we need to
+	swap %ENV temporarily to prevent runtime warning from certain
+	versions of perl.
+
+2005-10-24  Daniel Macks  <dmacks@netspace.org>
+
 	* Checksum.pm: get_all_checksums: don't crash if a back-end isn't
 	implemented.
 
